--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Gill+Sans+Nova&display=swap" rel="stylesheet" />
   <!-- External CSS -->
   <link rel="stylesheet" href="styles.css" />
-  <!-- Typed.js for animated header text -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
 </head>
 <body>
-  <!-- Header with animated gradient background and navigation -->
+  <!-- Single Header Bar with Animated Marquee and Navigation -->
   <header class="top-bar">
+    <!-- Marquee Text -->
+    <div class="marquee">
+      <span>
+        Welcome, I'm Pharaoh Kipkirui Chirchir, BI Specialist, Machine Learning Expert, Tech Innovator, Data Analyst
+      </span>
+    </div>
+    <!-- Navigation -->
     <nav class="navbar">
       <div class="nav-container">
-        <div class="nav-logo">Pharaoh Kipkirui Chirchir</div>
         <ul class="nav-links">
           <li><a href="#profile" class="nav-link"><i class="fas fa-user"></i> Profile</a></li>
           <li><a href="#about" class="nav-link"><i class="fas fa-info-circle"></i> About Me</a></li>
@@ -32,10 +36,6 @@
         </ul>
       </div>
     </nav>
-    <div class="top-bar-content">
-      <h1>Welcome, I'm Pharaoh Kipkirui Chirchir</h1>
-      <span class="typed"></span>
-    </div>
   </header>
   
   <main>
