--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- Ensure the site scales well on mobile devices -->
+  <!-- Ensures proper scaling on mobile devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pharaoh Kipkirui Chirchir | Data Analyst Portfolio</title>
   <!-- Font Awesome for icons -->
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Single Header Bar with Animated Marquee and Navigation -->
+  <!-- Single Header Bar with Animated Marquee & Navigation -->
   <header class="top-bar">
     <!-- Marquee Text -->
     <div class="marquee">
@@ -200,7 +200,7 @@
     </section>
   </main>
   
-  <!-- Footer with Social Links and Terms -->
+  <!-- Footer with Social Links -->
   <footer id="footer" class="footer">
     <div class="footer-container">
       <div class="footer-content">
@@ -214,9 +214,6 @@
           </a>
           <a href="https://wa.me/254725674081" class="social-link" target="_blank">
             <i class="fab fa-whatsapp"></i>
-          </a>
-          <a href="mailto:chirkiruiphero@gmail.com" class="social-link" target="_blank">
-            <i class="fas fa-envelope"></i>
           </a>
         </div>
         <p>© 2025 Pharaoh Chirchir | All Rights Reserved</p>
