--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- Ensures proper scaling on mobile devices -->
+  <!-- Ensures proper scaling on mobile devices and web app capability -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>Pharaoh Kipkirui Chirchir | Data Analyst Portfolio</title>
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
@@ -21,7 +22,7 @@
     <!-- Marquee Text -->
     <div class="marquee">
       <span>
-        Welcome, I'm Pharaoh Kipkirui Chirchir, BI Specialist, Machine Learning Expert, Tech Innovator, Data Analyst
+        Welcome to my Portfolio Profile, I'm Pharaoh Kipkirui Chirchir, BI Specialist, Machine Learning Expert, Tech Innovator, Data Analyst
       </span>
     </div>
     <!-- Navigation -->
