--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- Ensures proper scaling on mobile devices and web app capability -->
+  <!-- Ensure proper scaling and mobile compatibility -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>Pharaoh Kipkirui Chirchir | Data Analyst Portfolio</title>
@@ -17,12 +17,12 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Single Header Bar with Animated Marquee & Navigation -->
+  <!-- Fixed Header with Animated Marquee & Navigation -->
   <header class="top-bar">
     <!-- Marquee Text -->
     <div class="marquee">
       <span>
-        Welcome to my Portfolio Profile, I'm Pharaoh Kipkirui Chirchir, BI Specialist, Machine Learning Expert, Tech Innovator, Data Analyst
+        Welcome, I'm Pharaoh Kipkirui Chirchir, BI Specialist, Machine Learning Expert, Tech Innovator, Data Analyst
       </span>
     </div>
     <!-- Navigation -->
