--- a/index.html
+++ b/index.html
@@ -202,21 +202,30 @@
   </main>
   
   <!-- Footer with Social Links -->
-  <footer id="footer" class="footer">
+  <div class="footer" id="footer">  
+  <div class="footer">
     <div class="footer-container">
       <div class="footer-content">
-        <p><strong>Connect with me:</strong></p>
-        <div class="social-links">
-          <a href="https://www.linkedin.com/in/pharaoh-chirchir-0b600b138" class="social-link" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="https://github.com/Chirchirp" class="social-link" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="https://wa.me/254725674081" class="social-link" target="_blank">
-            <i class="fab fa-whatsapp"></i>
-          </a>
+        <div class="social-connect">
+          <p><strong>Connect with me:</strong></p>
         </div>
+      
+      <div class="social-links">
+        <a href="https://www.linkedin.com/in/pharaoh-chirchir-0b600b138" class="social-link" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/Chirchirp" class="social-link" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://wa.me/254725674081" class="social-link" target="_blank">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="mailto:chirkiruiphero@gmail.com" class="social-link" target="_blank">
+          <i class="fas fa-envelope"></i>
+        </a>
+      </div>
+
+      <div class="footer-note">
         <p>© 2025 Pharaoh Chirchir | All Rights Reserved</p>
         <div class="footer-links">
           <a href="#" id="termsBtn">Privacy Policy</a>
