--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script type="text/javascript">
     // Initialize EmailJS with your user ID (replace 'YOUR_USER_ID' with your actual EmailJS user id)
     (function(){
-      emailjs.init("Z5IfVlRtBYqwWMLSM");
+      emailjs.init("YOUR_USER_ID");
     })();
   </script>
 </head>
@@ -93,6 +93,7 @@
         <div class="expertise">
           <div class="expertise-item">
             <h4>Advanced Analytics</h4>
+            <!-- Entire text now always displayed -->
             <p class="short-description">
               Using statistical methods and machine learning to predict trends and forecast performance.
             </p>
@@ -223,6 +224,9 @@
           </a>
           <a href="https://wa.me/254725674081" class="social-link" target="_blank">
             <i class="fab fa-whatsapp"></i>
+          </a>
+          <a href="mailto:chirkiruiphero@gmail.com" class="social-link" target="_blank">
+            <i class="fas fa-envelope"></i>
           </a>
         </div>
         <p>© 2025 Pharaoh Chirchir | All Rights Reserved</p>
