--- a/index.html
+++ b/index.html
@@ -200,11 +200,12 @@
       <div class="section-container">
         <h2>Resume &amp; Certifications</h2>
         <p>
-          For more details on my background, skills, and experience, download my resume below. Click the button to also view my certifications and recognitions.
+         For more details on my background, skills, and experience, feel free to click on the links below to view my resume, certifications and recognitions, or to visit my blog.
         </p>
         <div class="button-group">
-          <a href="resume.pdf" download class="btn-resume">Download Resume (PDF)</a>
-          <a href="https://www.linkedin.com/in/pharaoh-chirchir-0b600b138/details/certifications/" target="_blank" class="btn-certifications" title="View Certifications &amp; Recognitions">View Certifications &amp; Recognitions</a>
+          <a href="https://chirchirp.github.io/resume/" target="_blank" class="btn-resume" title="Click here to view my resume on my website">View Resume</a>
+          <a href="https://www.linkedin.com/in/pharaoh-chirchir-0b600b138/details/certifications/" target="_blank" class="btn-certifications" title="Click here to view my certifications and recognitions on LinkedIn">View Certifications &amp; Recognitions</a>
+          <a href="BLOG_URL_HERE" target="_blank" class="btn-blog" title="Click here to visit my blog">Visit Blog</a>
         </div>
       </div>
     </section>
