--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="button-group">
           <a href="https://chirchirp.github.io/resume/" target="_blank" class="btn-resume" title="Click here to view my resume on my website">View Resume</a>
           <a href="https://www.linkedin.com/in/pharaoh-chirchir-0b600b138/details/certifications/" target="_blank" class="btn-certifications" title="Click here to view my certifications and recognitions on LinkedIn">View Certifications &amp; Recognitions</a>
-          <--a href="BLOG_URL_HERE" target="_blank" class="btn-blog" title="Click here to visit my blog">Visit Blog</a-->
+          <!--a href="BLOG_URL_HERE" target="_blank" class="btn-blog" title="Click here to visit my blog">Visit Blog</a-->
         </div>
       </div>
     </section>
