--- a/index.html
+++ b/index.html
@@ -83,54 +83,62 @@
     
     <!-- About Me Section -->
     <section id="about">
-      <div class="section-container">
-        <h2>About Me</h2>
-        <p><strong>Seasoned Data Analyst | 7+ Years Turning Data into Strategic Impact</strong></p>
-        <p>
-          I design and implement end-to-end analytics solutions that drive efficiency, automation, and data-driven decision-making across industries. With a strong foundation in data modeling, predictive analytics, and business intelligence, I transform complex data into actionable insights that optimize performance and enhance strategic planning.
+  <div class="section-container">
+    <h2>About Me</h2>
+    <p><strong>Seasoned Data Analyst | 7+ Years Turning Data into Strategic Impact</strong></p>
+    <p>
+      I design and implement end-to-end analytics solutions that drive efficiency, automation, and data-driven decision-making across industries. With a strong foundation in data modeling, predictive analytics, and business intelligence, I transform complex data into actionable insights that optimize performance and enhance strategic planning.
+    </p>
+    <p>I offer comprehensive analytics services including:</p>
+    <ul>
+      <li>Predictive modeling and machine learning solutions</li>
+      <li>Data visualization and interactive dashboards</li>
+      <li>Statistical analysis and hypothesis testing</li>
+      <li>Big data processing and analytics</li>
+      <li>Business intelligence and reporting</li>
+    </ul>
+    <h3>Key Expertise</h3>
+    <div class="expertise">
+      <div class="expertise-item">
+        <h4>Advanced Analytics</h4>
+        <p class="short-description">
+          Using statistical methods and machine learning to predict trends and forecast performance.
         </p>
-        <h3>Key Expertise</h3>
-        <div class="expertise">
-          <div class="expertise-item">
-            <h4>Advanced Analytics</h4>
-            <!-- Entire text now always displayed -->
-            <p class="short-description">
-              Using statistical methods and machine learning to predict trends and forecast performance.
-            </p>
-            <p class="long-description">
-              Implementing predictive models with time-series analysis and supervised learning to drive decisions.
-            </p>
-          </div>
-          <div class="expertise-item">
-            <h4>BI &amp; Visualization</h4>
-            <p class="short-description">
-              Crafting interactive dashboards and automated reporting solutions.
-            </p>
-            <p class="long-description">
-              Building dynamic visualizations using tools like Tableau, Power BI, and custom web apps.
-            </p>
-          </div>
-          <div class="expertise-item">
-            <h4>Data Infrastructure</h4>
-            <p class="short-description">
-              Designing scalable data pipelines and efficient ETL workflows.
-            </p>
-            <p class="long-description">
-              Leveraging cloud platforms (AWS/Azure) to create robust and accessible data architectures.
-            </p>
-          </div>
-          <div class="expertise-item">
-            <h4>Impact</h4>
-            <p class="short-description">
-              Delivering efficiency gains of 30–95% through data-driven strategies.
-            </p>
-            <p class="long-description">
-              Collaborating with teams to enhance performance, reduce costs, and drive growth.
-            </p>
-          </div>
-        </div>
+        <p class="long-description">
+          Implementing predictive models with time-series analysis and supervised learning to drive decisions.
+        </p>
       </div>
-    </section>
+      <div class="expertise-item">
+        <h4>BI &amp; Visualization</h4>
+        <p class="short-description">
+          Crafting interactive dashboards and automated reporting solutions.
+        </p>
+        <p class="long-description">
+          Building dynamic visualizations using tools like Tableau, Power BI, and custom web apps.
+        </p>
+      </div>
+      <div class="expertise-item">
+        <h4>Data Infrastructure</h4>
+        <p class="short-description">
+          Designing scalable data pipelines and efficient ETL workflows.
+        </p>
+        <p class="long-description">
+          Leveraging cloud platforms (AWS/Azure) to create robust and accessible data architectures.
+        </p>
+      </div>
+      <div class="expertise-item">
+        <h4>Impact</h4>
+        <p class="short-description">
+          Delivering efficiency gains of 30–95% through data-driven strategies.
+        </p>
+        <p class="long-description">
+          Collaborating with teams to enhance performance, reduce costs, and drive growth.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
     
     <!-- Projects Completed Section -->
     <section id="projects">
