--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       I design and implement end-to-end analytics solutions that drive efficiency, automation, and data-driven decision-making across industries. With a strong foundation in data modeling, predictive analytics, and business intelligence, I transform complex data into actionable insights that optimize performance and enhance strategic planning.
     </p>
     <p>I offer comprehensive analytics services including:</p>
-    <ul>
+    <ul style="margin-left: 20px; padding-left: 20px;">
       <li>Predictive modeling and machine learning solutions</li>
       <li>Data visualization and interactive dashboards</li>
       <li>Statistical analysis and hypothesis testing</li>
@@ -127,17 +127,18 @@
         </p>
       </div>
       <div class="expertise-item">
-        <h4>Impact</h4>
+        <h4>Machine Learning</h4>
         <p class="short-description">
-          Delivering efficiency gains of 30–95% through data-driven strategies.
+          Developing predictive algorithms and intelligent models.
         </p>
         <p class="long-description">
-          Collaborating with teams to enhance performance, reduce costs, and drive growth.
+          Utilizing both supervised and unsupervised techniques to optimize business outcomes.
         </p>
       </div>
     </div>
   </div>
 </section>
+
 
     
     <!-- Projects Completed Section -->
