--- a/index.html
+++ b/index.html
@@ -85,60 +85,61 @@
     <section id="about">
   <div class="section-container">
     <h2>About Me</h2>
-    <p><strong>Seasoned Data Analyst | 7+ Years Turning Data into Strategic Impact</strong></p>
+    <p><strong>Data Strategist Who Bridges Numbers and Narratives</strong></p>
     <p>
-      I design and implement end-to-end analytics solutions that drive efficiency, automation, and data-driven decision-making across industries. With a strong foundation in data modeling, predictive analytics, and business intelligence, I transform complex data into actionable insights that optimize performance and enhance strategic planning.
+      For seven years, I've helped companies find their story in spreadsheets and meaning in metrics. My work isn't just about charts and algorithms - it's about creating clear paths from raw data to real-world decisions that stick. I thrive on making complex analysis feel approachable for teams at every level.
     </p>
-    <p>I offer comprehensive analytics services including:</p>
-    <ul style="margin-left: 20px; padding-left: 20px;">
-      <li>Predictive modeling and machine learning solutions</li>
-      <li>Data visualization and interactive dashboards</li>
-      <li>Statistical analysis and hypothesis testing</li>
-      <li>Big data processing and analytics</li>
-      <li>Business intelligence and reporting</li>
+
+    <h3>What I Bring to the Table</h3>
+    <ul class="services-list">
+      <li>Future-proofing decisions with predictive models that actually get used</li>
+      <li>Turning dashboard development into collaborative design sessions</li>
+      <li>Building analytics systems that grow with your business</li>
+      <li>Translating technical findings into boardroom-ready strategies</li>
     </ul>
-    <h3>Key Expertise</h3>
+
+    <div class="data-protection">
+      <h4>Data Guardian Approach</h4>
+      <p>
+        I bake privacy into every project from day one. This means:
+      </p>
+      <ul>
+        <li>Creating plain-language data policies teams actually understand</li>
+        <li>Implementing security measures that work behind the scenes</li>
+        <li>Regularly stress-testing systems against real-world scenarios</li>
+        <li>Training staff through hands-on workshops, not just compliance checklists</li>
+      </ul>
+    </div>
+
+    <h3>Core Skills in Action</h3>
     <div class="expertise">
       <div class="expertise-item">
-        <h4>Advanced Analytics</h4>
-        <p class="short-description">
-          Using statistical methods and machine learning to predict trends and forecast performance.
-        </p>
-        <p class="long-description">
-          Implementing predictive models with time-series analysis and supervised learning to drive decisions.
+        <h4>Making Data Click</h4>
+        <p>
+          I build tools that help teams spot trends themselves, using everything from quick Power BI reports to custom web apps that fit unique workflows.
         </p>
       </div>
+      
       <div class="expertise-item">
-        <h4>BI &amp; Visualization</h4>
-        <p class="short-description">
-          Crafting interactive dashboards and automated reporting solutions.
-        </p>
-        <p class="long-description">
-          Building dynamic visualizations using tools like Tableau, Power BI, and custom web apps.
+        <h4>Infrastructure That Lasts</h4>
+        <p>
+          My cloud solutions balance today's budget with tomorrow's needs, whether that's setting up lean AWS pipelines or overhauling legacy Excel systems.
         </p>
       </div>
+
       <div class="expertise-item">
-        <h4>Data Infrastructure</h4>
-        <p class="short-description">
-          Designing scalable data pipelines and efficient ETL workflows.
-        </p>
-        <p class="long-description">
-          Leveraging cloud platforms (AWS/Azure) to create robust and accessible data architectures.
-        </p>
-      </div>
-      <div class="expertise-item">
-        <h4>Machine Learning</h4>
-        <p class="short-description">
-          Developing predictive algorithms and intelligent models.
-        </p>
-        <p class="long-description">
-          Utilizing both supervised and unsupervised techniques to optimize business outcomes.
+        <h4>Machine Learning That Matters</h4>
+        <p>
+          Specializing in models that explain their thinking - no black boxes. My favorites are inventory predictors that learn from supply chain hiccups.
         </p>
       </div>
     </div>
+
+    <p class="closing-note">
+      The best part of my job? Watching someone from marketing or operations grab a dashboard and say "Wait, I see something here..." - that's when data truly comes alive.
+    </p>
   </div>
 </section>
-
 
     
     <!-- Projects Completed Section -->
