--- a/index.html
+++ b/index.html
@@ -85,58 +85,58 @@
     <section id="about">
   <div class="section-container">
     <h2>About Me</h2>
-    <p><strong>Data Strategist Who Bridges Numbers and Narratives</strong></p>
+    <p><strong>Data Analyst | Turning Numbers into Clear, Actionable Insights</strong></p>
     <p>
-      For seven years, I've helped companies find their story in spreadsheets and meaning in metrics. My work isn't just about charts and algorithms - it's about creating clear paths from raw data to real-world decisions that stick. I thrive on making complex analysis feel approachable for teams at every level.
+      I’ve spent over seven years helping businesses make sense of their data. My job is to take messy, complex information and turn it into clear, actionable insights that teams can use to make better decisions. Whether it’s spotting trends, building easy-to-use dashboards, or finding answers to tough questions, I make data work for people.
     </p>
 
-    <h3>What I Bring to the Table</h3>
+    <h3>What I Do</h3>
     <ul class="services-list">
-      <li>Future-proofing decisions with predictive models that actually get used</li>
-      <li>Turning dashboard development into collaborative design sessions</li>
-      <li>Building analytics systems that grow with your business</li>
-      <li>Translating technical findings into boardroom-ready strategies</li>
+      <li>Clean and organize data to make it ready for analysis</li>
+      <li>Create dashboards and reports that are simple to understand</li>
+      <li>Find patterns and trends that help businesses grow</li>
+      <li>Answer key questions using data, like "What’s driving sales?" or "Where can we improve?"</li>
     </ul>
 
     <div class="data-protection">
-      <h4>Data Guardian Approach</h4>
+      <h4>Keeping Data Safe</h4>
       <p>
-        I bake privacy into every project from day one. This means:
+        I take data security seriously. In every project, I ensure data is handled responsibly by:
       </p>
       <ul>
-        <li>Creating plain-language data policies teams actually understand</li>
-        <li>Implementing security measures that work behind the scenes</li>
-        <li>Regularly stress-testing systems against real-world scenarios</li>
-        <li>Training staff through hands-on workshops, not just compliance checklists</li>
+        <li>Setting up clear rules for how data is collected, stored, and used</li>
+        <li>Making sure only the right people have access to sensitive information</li>
+        <li>Regularly checking systems to prevent errors or breaches</li>
+        <li>Helping teams understand why data protection matters</li>
       </ul>
     </div>
 
-    <h3>Core Skills in Action</h3>
+    <h3>How I Work</h3>
     <div class="expertise">
       <div class="expertise-item">
-        <h4>Making Data Click</h4>
+        <h4>Making Data Clear</h4>
         <p>
-          I build tools that help teams spot trends themselves, using everything from quick Power BI reports to custom web apps that fit unique workflows.
+          I create dashboards and reports that are easy to read and use. Whether it’s in Power BI, Tableau, or Excel, I focus on making sure everyone—from managers to team members—can understand the story the data is telling.
         </p>
       </div>
       
       <div class="expertise-item">
-        <h4>Infrastructure That Lasts</h4>
+        <h4>Solving Problems with Data</h4>
         <p>
-          My cloud solutions balance today's budget with tomorrow's needs, whether that's setting up lean AWS pipelines or overhauling legacy Excel systems.
+          I dig into data to find answers to specific questions. For example, I might analyze sales data to figure out why certain products perform better or look at customer feedback to find areas for improvement.
         </p>
       </div>
 
       <div class="expertise-item">
-        <h4>Machine Learning That Matters</h4>
+        <h4>Keeping Data Organized</h4>
         <p>
-          Specializing in models that explain their thinking - no black boxes. My favorites are inventory predictors that learn from supply chain hiccups.
+          I set up systems to make sure data is accurate, up-to-date, and easy to access. This means creating processes to clean and organize data so it’s always ready for analysis.
         </p>
       </div>
     </div>
 
     <p class="closing-note">
-      The best part of my job? Watching someone from marketing or operations grab a dashboard and say "Wait, I see something here..." - that's when data truly comes alive.
+      At the end of the day, my goal is simple: to make data useful. I love seeing teams use the insights I provide to make smarter decisions and grow their business.
     </p>
   </div>
 </section>
