--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
     <h3>What I Do</h3>
     <ul class="services-list">
+    <ul style="margin-left: 25px; padding-left: 25px;">
       <li>Clean and organize data to make it ready for analysis</li>
       <li>Create dashboards and reports that are simple to understand</li>
       <li>Find patterns and trends that help businesses grow</li>
@@ -101,12 +102,14 @@
     <div class="data-protection">
       <h4>Keeping Data Safe</h4>
       <p>
-        I take data security seriously. In every project, I ensure data is handled responsibly by:
+        I take data security and protectin seriously. In every project, I ensure data is handled responsibly by:
       </p>
       <ul>
+      <ul style="margin-left: 25px; padding-left: 25px;">
         <li>Setting up clear rules for how data is collected, stored, and used</li>
         <li>Making sure only the right people have access to sensitive information</li>
         <li>Regularly checking systems to prevent errors or breaches</li>
+        <li>Where necessary, I anonymize and clean data with sensitive personally identifiable information </li>
         <li>Helping teams understand why data protection matters</li>
       </ul>
     </div>
@@ -123,7 +126,7 @@
       <div class="expertise-item">
         <h4>Solving Problems with Data</h4>
         <p>
-          I dig into data to find answers to specific questions. For example, I might analyze sales data to figure out why certain products perform better or look at customer feedback to find areas for improvement.
+          I dig into data to find answers to specific questions. For example, when analyzing sales data to figure out why certain products perform better I look at customer feedback to find areas for improvement by incorporating sentiment analysis.
         </p>
       </div>
 
@@ -131,6 +134,13 @@
         <h4>Keeping Data Organized</h4>
         <p>
           I set up systems to make sure data is accurate, up-to-date, and easy to access. This means creating processes to clean and organize data so it’s always ready for analysis.
+        </p>
+      </div>
+   
+      <div class="expertise-item">
+        <h4>Machine Learnig for decision-making</h4>
+        <p>
+          I build predictive models that help companies anticipate future trends and challenges. By analyzing historical data, I create tools that forecast outcomes—like customer behavior, or operational needs for businesses to make proactive, data-driven decisions and stay ahead of the curve.
         </p>
       </div>
     </div>
