--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <p><strong>Data Analyst | Turning Numbers into Clear, Actionable Insights</strong></p>
     <p>
       I’ve spent over seven years helping businesses make sense of their data. My job is to take messy, complex information and turn it into clear, actionable insights that teams can use to make better decisions. Whether it’s spotting trends, building easy-to-use dashboards, or finding answers to tough questions, I make data work for people.
-    </p>
+    <p style="margin-bottom: 1.5em;">Your text here.</p>
 
     <h3>What I Do</h3>
     <ul class="services-list">
