--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
     <section id="about">
   <div class="section-container">
     <h2>About Me</h2>
+    <p style="margin-bottom: 1.0em;">Your text here.</p>
     <p><strong>Data Analyst | Turning Numbers into Clear, Actionable Insights</strong></p>
     <p>
-      I’ve spent over seven years helping businesses make sense of their data. My job is to take messy, complex information and turn it into clear, actionable insights that teams can use to make better decisions. Whether it’s spotting trends, building easy-to-use dashboards, or finding answers to tough questions, I make data work for people.
+      I have spent over seven years helping organizations make sense of their datasets. My job is to take messy, complex information and turn it into clear, actionable insights that teams can use to make better decisions. Whether it’s spotting trends, building easy-to-use dashboards, or finding answers to tough questions, I make data work for people.
     <p style="margin-bottom: 1.5em;">Your text here.</p>
 
     <h3>What I Do</h3>
@@ -96,8 +97,9 @@
       <li>Clean and organize data to make it ready for analysis</li>
       <li>Create dashboards and reports that are simple to understand</li>
       <li>Find patterns and trends that help businesses grow</li>
-      <li>Answer key questions using data, like "What’s driving sales?" or "Where can we improve?"</li>
+      <li>Answer key questions using data, like "What’s the reason for trend?" or "Where can we improve?"</li>
     </ul>
+      <p style="margin-bottom: 1.5em;">Your text here.</p>
 
     <div class="data-protection">
       <h4>Keeping Data Safe</h4>
@@ -112,6 +114,7 @@
         <li>Where necessary, I anonymize and clean data with sensitive personally identifiable information </li>
         <li>Helping teams understand why data protection matters</li>
       </ul>
+        <p style="margin-bottom: 1.5em;">Your text here.</p>
     </div>
 
     <h3>How I Work</h3>
@@ -119,7 +122,7 @@
       <div class="expertise-item">
         <h4>Making Data Clear</h4>
         <p>
-          I create dashboards and reports that are easy to read and use. Whether it’s in Power BI, Tableau, or Excel, I focus on making sure everyone—from managers to team members—can understand the story the data is telling.
+          I create dashboards and reports that are easy to read and use. Whether it’s in Power BI, Tableau, Python, SQL or Excel, I focus on making sure everyone—from stakeholders, managers to team members—can understand the story the data is telling. 
         </p>
       </div>
       
@@ -133,7 +136,7 @@
       <div class="expertise-item">
         <h4>Keeping Data Organized</h4>
         <p>
-          I set up systems to make sure data is accurate, up-to-date, and easy to access. This means creating processes to clean and organize data so it’s always ready for analysis.
+          I set up systems to make sure data is accurate, up-to-date, and easy to access. This means creating processes to clean and organize data so it’s always ready for analysis. Data cleaning has always been a key area of my work, with automated scripts for every workflow.
         </p>
       </div>
    
@@ -144,9 +147,10 @@
         </p>
       </div>
     </div>
+      <p style="margin-bottom: 1.5em;">Your text here.</p>
 
     <p class="closing-note">
-      At the end of the day, my goal is simple: to make data useful. I love seeing teams use the insights I provide to make smarter decisions and grow their business.
+      At the end of the day, my goal is simple: to make data useful. I love seeing teams use the insights I provide to make smarter decisions and grow their business and simplify their day to day operational tasks.
     </p>
   </div>
 </section>
