--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     </div>
 
     <h3>How I Work</h3>
+      <p style="margin-bottom: 1.5em;">.</p>
     <div class="expertise">
       <div class="expertise-item">
         <h4>Making Data Clear</h4>
@@ -147,7 +148,7 @@
         </p>
       </div>
     </div>
-      <p style="margin-bottom: 1.5em;">Your text here.</p>
+      <p style="margin-bottom: 1.5em;">.</p>
 
     <p class="closing-note">
       At the end of the day, my goal is simple: to make data useful. I love seeing teams use the insights I provide to make smarter decisions and grow their business and simplify their day to day operational tasks.
