--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
     <section id="about">
   <div class="section-container">
     <h2>About Me</h2>
-    <p style="margin-bottom: 1.0em;">Your text here.</p>
+    <p style="margin-bottom: 1.0em;"></p>
     <p><strong>Data Analyst | Turning Numbers into Clear, Actionable Insights</strong></p>
     <p>
       I have spent over seven years helping organizations make sense of their datasets. My job is to take messy, complex information and turn it into clear, actionable insights that teams can use to make better decisions. Whether it’s spotting trends, building easy-to-use dashboards, or finding answers to tough questions, I make data work for people.
-    <p style="margin-bottom: 1.5em;">Your text here.</p>
+    <p style="margin-bottom: 1.0em;"></p>
 
     <h3>What I Do</h3>
     <ul class="services-list">
@@ -99,7 +99,7 @@
       <li>Find patterns and trends that help businesses grow</li>
       <li>Answer key questions using data, like "What’s the reason for trend?" or "Where can we improve?"</li>
     </ul>
-      <p style="margin-bottom: 1.5em;">Your text here.</p>
+      <p style="margin-bottom: 1.0em;"></p>
 
     <div class="data-protection">
       <h4>Keeping Data Safe</h4>
@@ -114,11 +114,11 @@
         <li>Where necessary, I anonymize and clean data with sensitive personally identifiable information </li>
         <li>Helping teams understand why data protection matters</li>
       </ul>
-        <p style="margin-bottom: 1.5em;">Your text here.</p>
+        <p style="margin-bottom: 1.0em;"></p>
     </div>
 
     <h3>How I Work</h3>
-      <p style="margin-bottom: 1.5em;">.</p>
+      <p style="margin-bottom: 1.0em;"></p>
     <div class="expertise">
       <div class="expertise-item">
         <h4>Making Data Clear</h4>
@@ -148,7 +148,7 @@
         </p>
       </div>
     </div>
-      <p style="margin-bottom: 1.5em;">.</p>
+      <p style="margin-bottom: 1.0em;"></p>
 
     <p class="closing-note">
       At the end of the day, my goal is simple: to make data useful. I love seeing teams use the insights I provide to make smarter decisions and grow their business and simplify their day to day operational tasks.
